; ModuleID = '/home/carl/AnghaBench/linux/security/selinux/extr_hooks.c_selinux_tun_dev_open.c'
source_filename = "/home/carl/AnghaBench/linux/security/selinux/extr_hooks.c_selinux_tun_dev_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tun_security_struct = type { i32 }

@selinux_state = common dso_local global i32 0, align 4
@SECCLASS_TUN_SOCKET = common dso_local global i32 0, align 4
@TUN_SOCKET__RELABELFROM = common dso_local global i32 0, align 4
@TUN_SOCKET__RELABELTO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @selinux_tun_dev_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @selinux_tun_dev_open(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.tun_security_struct*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.tun_security_struct*
  store %struct.tun_security_struct* %8, %struct.tun_security_struct** %4, align 8
  %9 = call i32 (...) @current_sid()
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load %struct.tun_security_struct*, %struct.tun_security_struct** %4, align 8
  %12 = getelementptr inbounds %struct.tun_security_struct, %struct.tun_security_struct* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @SECCLASS_TUN_SOCKET, align 4
  %15 = load i32, i32* @TUN_SOCKET__RELABELFROM, align 4
  %16 = call i32 @avc_has_perm(i32* @selinux_state, i32 %10, i32 %13, i32 %14, i32 %15, i32* null)
  store i32 %16, i32* %6, align 4
  %17 = load i32, i32* %6, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %1
  %20 = load i32, i32* %6, align 4
  store i32 %20, i32* %2, align 4
  br label %35

21:                                               ; preds = %1
  %22 = load i32, i32* %5, align 4
  %23 = load i32, i32* %5, align 4
  %24 = load i32, i32* @SECCLASS_TUN_SOCKET, align 4
  %25 = load i32, i32* @TUN_SOCKET__RELABELTO, align 4
  %26 = call i32 @avc_has_perm(i32* @selinux_state, i32 %22, i32 %23, i32 %24, i32 %25, i32* null)
  store i32 %26, i32* %6, align 4
  %27 = load i32, i32* %6, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %21
  %30 = load i32, i32* %6, align 4
  store i32 %30, i32* %2, align 4
  br label %35

31:                                               ; preds = %21
  %32 = load i32, i32* %5, align 4
  %33 = load %struct.tun_security_struct*, %struct.tun_security_struct** %4, align 8
  %34 = getelementptr inbounds %struct.tun_security_struct, %struct.tun_security_struct* %33, i32 0, i32 0
  store i32 %32, i32* %34, align 4
  store i32 0, i32* %2, align 4
  br label %35

35:                                               ; preds = %31, %29, %19
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i32 @current_sid(...) #1

declare dso_local i32 @avc_has_perm(i32*, i32, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
